Try to fix overflow issue; page won't scroll when content overflows. Still not solved

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,6 @@
 html {
     height: 100%;
+    overflow: visible;
 }
 
 @media only screen and (max-width: 640px) {
